<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TodaGo</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign up for an account</string>
    <string name="back">Back</string>
    <string name="sign">Sign Up</string>
    <string name="personal_information">Personal information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="account_information">Account information</string>
    <string name="location">Set your location</string>
    <string name="location_picker">Location picker</string>
    <string name="verification">Verification (Recommended)</string>
    <string name="phone">Phone</string>
    <string name="account_recovery">Account recovery</string>
    <string name="recover">Recover</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="tab_icon">Tab Icon</string>
    <string name="logout">Log Out</string>
    <string name="select_location">Select location</string>
    <string name="location_title">Location</string>
    <string name="book_ride">Book a ride\n(Solo)</string>
    <string name="book">Book</string>
    <string name="set_origin">Set origin</string>
    <string name="set_destination">Set destination</string>
    <string name="cancel">Cancel</string>
    <string name="verified">Verified</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account Details</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up_title">Sign-up</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="edit_location">Edit Location</string>
    <string name="verify">Verify</string>
    <string name="scan_id">Scan your National ID QR code</string>
    <string name="note_scan">NOTE: This is only to verify your account. Verified accounts gain initial trust rating. No other information will be stored.</string>
    <string name="note_name">NOTE: Given names can not be changed after sign up.</string>
    <string name="change_password">Change Account Password</string>
    <string name="app_notice">This app is a Thesis Project and for selected users only. Do not distribute.</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="uppercase">Must have at least one uppercase letter (A-Z)</string>
    <string name="lowercase">Must have at least one lowercase letter (a-z)</string>
    <string name="symbol"><![CDATA[Must have at least one symbol (?!@#$%&* …)]]></string>
    <string name="digit" tools:ignore="TypographyDashes">Must have at least one number (0-9)</string>
    <string name="length">Minimum of 8 characters</string>
    <string name="reset_password">To reset your password, logout then click \'Forgot password?\'.</string>
    <string name="change">Change</string>
    <string name="change_email">Change Account Email</string>
    <string name="understood">Understood</string>
    <string name="alert">Alert</string>
    <string name="location_pin">Location pin</string>
    <string name="share_ride">Share a ride\n(Pool)</string>
    <string name="view_rides">View Available Rides</string>
    <string name="share_ride_message">You will have to wait a little longer when sharing a ride</string>
    <string name="search">Search for a place</string>
    <string name="camera_button">Camera Button</string>
    <string name="view">View</string>
    <string name="passengers">Passenger/s: 1</string>
    <string name="baggage">Baggage: Handcarry</string>
    <string name="pin">Pin</string>
    <string name="icon">Icon</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="new_phone">New Phone</string>
    <string name="passenger">Passenger/s</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="call">Call</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="price_breakdown">Price Breakdown</string>
    <string name="pending">Pending</string>
    <string name="verify_account">Please verify your account on your \'Profile\' to start riding with TodaGo</string>
    <string name="empty_history">Your history is empty</string>
    <string name="minimum_fare">Minimum Fare</string>
    <string name="fare_per_km">Fare per KM</string>
    <string name="discount">Discount</string>
    <string name="ride_cost">Ride Cost</string>
    <string name="service_fee">Service Fee (min ₱1)</string>
    <string name="final_price">Final Price</string>
    <string name="type">Type:</string>
    <string name="passenger_">Passenger:</string>
    <string name="driver_">Driver:</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="price">Price:</string>
    <string name="welcome">Start Your Journey</string>
    <string name="image">Image</string>
    <string name="ride_along">Ride along other TodaGoers</string>
    <string name="go_quick">Go quick and private</string>
    <string name="map_type">Map Type</string>
    <string name="chat">Chat</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>