<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/gray_dark"
            android:textColorHint="#656565"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/new_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:hint="@string/new_password"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/gray_dark"
            android:textColorHint="#656565"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/require"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/uppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uppercase"
                android:textColor="@color/red"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/lowercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowercase"
                android:textColor="@color/red"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:textColor="@color/red"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/digit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digit"
                android:textColor="@color/red"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textColor="@color/red"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_white_red"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="15sp"
                app:backgroundTint="@null"
                app:backgroundTintMode="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_blue_dark"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@null"
                app:backgroundTintMode="@null" />

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/gray"
            android:textSize="11sp" />

    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/layout" />

</RelativeLayout>